err/containmentunit.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/containmentUnit'...
Listing './lib/python3.5/site-packages/containmentUnit/config'...
Listing './lib/python3.5/site-packages/containmentUnit/controllers'...
Compiling './lib/python3.5/site-packages/containmentUnit/controllers/casperjs.py'...
***   File "./lib/python3.5/site-packages/containmentUnit/controllers/casperjs.py", line 113
    print "\n \t count is :"+ str(count)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/containmentUnit/controllers/wraith.py'...
***   File "./lib/python3.5/site-packages/containmentUnit/controllers/wraith.py", line 65
    print "Generating Yaml File for : " + self.siteName;
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/containmentUnit/dependencyMods'...
Listing './lib/python3.5/site-packages/containmentUnit/dependencyMods/bmpExtract'...
Listing './lib/python3.5/site-packages/containmentUnit/dependencyMods/executableBase'...
Listing './lib/python3.5/site-packages/containmentUnit/dependencyMods/wraith_customFiles'...
Listing './lib/python3.5/site-packages/containmentUnit/lib'...
Compiling './lib/python3.5/site-packages/containmentUnit/lib/proxyPortManager.py'...
***   File "./lib/python3.5/site-packages/containmentUnit/lib/proxyPortManager.py", line 29
    print "Initializing Proxy Manager - server port : set to : " + str(serverPort)
                                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/containmentUnit/public'...
Listing './lib/python3.5/site-packages/containmentUnit/public/Wraith'...
Listing './lib/python3.5/site-packages/containmentUnit/public/Wraith/configs'...
Listing './lib/python3.5/site-packages/containmentUnit/public/Wraith/configs/logs'...
Listing './lib/python3.5/site-packages/containmentUnit/public/Wraith/configs/pathData'...
Listing './lib/python3.5/site-packages/containmentUnit/public/Wraith/configs/screenCaptures'...
Listing './lib/python3.5/site-packages/containmentUnit/public/Wraith/javascript'...
Listing './lib/python3.5/site-packages/containmentUnit/public/images'...
Listing './lib/python3.5/site-packages/containmentUnit/public/scripts'...
Listing './lib/python3.5/site-packages/containmentUnit/public/styles'...
Listing './lib/python3.5/site-packages/containmentUnit/public/styles/images'...
Listing './lib/python3.5/site-packages/containmentUnit/public/styles/images/menu'...
Listing './lib/python3.5/site-packages/containmentUnit/public/swf'...
Listing './lib/python3.5/site-packages/containmentUnit/templates'...
Listing './lib/python3.5/site-packages/containmentUnit/templates/common'...
Listing './lib/python3.5/site-packages/containmentUnit/templates/create'...
Listing './lib/python3.5/site-packages/containmentUnit/templates/details'...
Listing './lib/python3.5/site-packages/containmentUnit/templates/display'...
Listing './lib/python3.5/site-packages/containmentUnit/templates/histogram'...
Listing './lib/python3.5/site-packages/containmentUnit/templates/home'...
Listing './lib/python3.5/site-packages/containmentUnit/templates/home/CasperScripts'...
Listing './lib/python3.5/site-packages/containmentUnit/templates/home/CasperScripts/output'...
Listing './lib/python3.5/site-packages/containmentUnit/templates/home/casperForms'...
Listing './lib/python3.5/site-packages/containmentUnit/templates/home/images'...
Listing './lib/python3.5/site-packages/containmentUnit/tests'...
Listing './lib/python3.5/site-packages/containmentUnit/tests/functional'...
Listing './lib/python3.5/site-packages/containmentUnit-1.0.14.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
